# atlas

./: LICENSE.txt  index.html  package.json  vite.config.js
atlas-app/: .env  Cargo.toml  atlas.db  diesel.toml
atlas-app/migrations/2024-08-16-143748_init/: down.sql  up.sql
atlas-app/src/: exec.rs  lib.rs  main.rs  schema.rs
atlas-app/src/models/: commands.rs  mod.rs  nodes.rs
atlas-app/src/tests/: node.rs
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src/router/: index.js
src/view/demo/: index.vue
src/views/: index.vue
src/views/demo/: index.vue
src/views/exec/: index.vue
src/views/layout/: index.vue
src/views/server/: index.vue
