[package]
name = "atlas"
version = "0.1.0"
description = "Atlas App"
authors = ["ut"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.0", features = ["sqlite", "chrono", "r2d2"] }
dotenv = "0.15"
chrono = { version = "0.4.38", features = ["serde"] }
r2d2 = "0.8"

[dev-dependencies]
dotenvy = "0.15"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
